<resources>
    <string name="app_name">Cloud Cat Local</string>
    <string name="title_home">首页</string>
    <string name="title_me">我</string>
    <string name="title_notifications">提醒</string>
    <string name="at_me">\@我的</string>
    <string name="comment">评论</string>
    <string name="comment_me">评论我的</string>
    <string name="like">赞</string>
    <string name="like_me">赞我的</string>
    <string name="nobody_forward">暂时还没有人转发</string>
    <string name="nobody_comment">暂时还没有人评论</string>
    <string name="nobody_like">暂时还没有人赞过</string>
    <string name="forward_poster">转发动态</string>
    <string name="comment_poster">评论动态</string>
    <string name="forward_poster_hint">顺便说点什么</string>
    <string name="comment_poster_hint">请输入您的评论</string>
    <string name="pdi_forward">动态详情 - 转发</string>
    <string name="pdi_comment">动态详情 - 评论</string>
    <string name="pdi_like">动态详情 - 赞</string>
    <string name="nothing_to_show">暂无数据</string>
    <string name="liked_me">赞了我</string>
    <string name="_what">\?</string>
    <string name="_add">+</string>
    <string name="status_loading">状态读取中</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="email">邮箱</string>
    <string name="signup">注册</string>
    <string name="signin">登录</string>
    <string name="account_signup">账户注册</string>
    <string name="account_signin">账户登录</string>
    <string name="no_account">没有账户？</string>
    <string name="init_name">name</string>
    <string name="init_content">content</string>
    <string name="init_time">time</string>
    <string name="signout">退出账户</string>
    <string name="account_setting">账户设置</string>
    <string name="avatar_setting">更改头像</string>
    <string name="about">关于</string>
    <string name="author">Cloud Cat\nv1.0\n\nSora Shiro\nGraduate Design\ngithub.com/Sora-Shiro</string>
</resources>
