<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/homeHeadDivider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentTop="true"
        android:background="@color/colorLightDivider"
        />


    <RelativeLayout
        android:id="@+id/layoutHome"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeHeadDivider"
        android:background="@drawable/item_btn"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false">


        <ImageView
            android:id="@+id/imgHead"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignTop="@id/imgHead"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imgHead"
            android:gravity="start|bottom"
            android:maxLines="1"
            android:text="@string/init_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_below="@id/textName"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imgHead"
            android:gravity="start|top"
            android:maxLines="1"
            android:text="@string/init_time"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp"
            />

        <RelativeLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgHead"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/textContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="3dp"
                android:text="@string/init_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_marginTop="3dp"
                android:layout_height="100dp"
                android:layout_below="@id/textContent"
                android:id="@+id/imgContent"
                />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/homeBottomDivider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/layoutHome"
        android:background="@color/colorLightDivider"
        />


</RelativeLayout>
